; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_mwl8k.c_mwl8k_cmd_set_post_scan.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/extr_mwl8k.c_mwl8k_cmd_set_post_scan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }
%struct.mwl8k_cmd_set_post_scan = type { %struct.TYPE_2__, i32, i64 }
%struct.TYPE_2__ = type { i8*, i8* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@MWL8K_CMD_SET_POST_SCAN = common dso_local global i32 0, align 4
@ETH_ALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee80211_hw*, i32*)* @mwl8k_cmd_set_post_scan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mwl8k_cmd_set_post_scan(%struct.ieee80211_hw* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ieee80211_hw*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.mwl8k_cmd_set_post_scan*, align 8
  %7 = alloca i32, align 4
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call %struct.mwl8k_cmd_set_post_scan* @kzalloc(i32 32, i32 %8)
  store %struct.mwl8k_cmd_set_post_scan* %9, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %10 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %11 = icmp eq %struct.mwl8k_cmd_set_post_scan* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %40

15:                                               ; preds = %2
  %16 = load i32, i32* @MWL8K_CMD_SET_POST_SCAN, align 4
  %17 = call i8* @cpu_to_le16(i32 %16)
  %18 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %19 = getelementptr inbounds %struct.mwl8k_cmd_set_post_scan, %struct.mwl8k_cmd_set_post_scan* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  store i8* %17, i8** %20, align 8
  %21 = call i8* @cpu_to_le16(i32 32)
  %22 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %23 = getelementptr inbounds %struct.mwl8k_cmd_set_post_scan, %struct.mwl8k_cmd_set_post_scan* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i8* %21, i8** %24, align 8
  %25 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %26 = getelementptr inbounds %struct.mwl8k_cmd_set_post_scan, %struct.mwl8k_cmd_set_post_scan* %25, i32 0, i32 2
  store i64 0, i64* %26, align 8
  %27 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %28 = getelementptr inbounds %struct.mwl8k_cmd_set_post_scan, %struct.mwl8k_cmd_set_post_scan* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = load i32, i32* @ETH_ALEN, align 4
  %32 = call i32 @memcpy(i32 %29, i32* %30, i32 %31)
  %33 = load %struct.ieee80211_hw*, %struct.ieee80211_hw** %4, align 8
  %34 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %35 = getelementptr inbounds %struct.mwl8k_cmd_set_post_scan, %struct.mwl8k_cmd_set_post_scan* %34, i32 0, i32 0
  %36 = call i32 @mwl8k_post_cmd(%struct.ieee80211_hw* %33, %struct.TYPE_2__* %35)
  store i32 %36, i32* %7, align 4
  %37 = load %struct.mwl8k_cmd_set_post_scan*, %struct.mwl8k_cmd_set_post_scan** %6, align 8
  %38 = call i32 @kfree(%struct.mwl8k_cmd_set_post_scan* %37)
  %39 = load i32, i32* %7, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %15, %12
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local %struct.mwl8k_cmd_set_post_scan* @kzalloc(i32, i32) #1

declare dso_local i8* @cpu_to_le16(i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @mwl8k_post_cmd(%struct.ieee80211_hw*, %struct.TYPE_2__*) #1

declare dso_local i32 @kfree(%struct.mwl8k_cmd_set_post_scan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
